fixed appicon layout and site title on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -27,7 +27,7 @@
     }
 
     @include media-query($on-palm) {
-        font-size: 2.5em;
+        font-size: 2.3em;
     }
 }
 
@@ -383,7 +383,7 @@ a.external-source {
 .appicon {
     display: block;
     float: right;
-    width: 300px;
+    width: 30%;
     margin-left: $spacing-unit;
     margin-top: 0px;
     margin-bottom: 0px;
